tests/typerel/ttypedesc_as_genericparam1.nim
discard """
  errormsg: "type mismatch: got <typedesc[int]>"
  line: 6
"""
# bug #3079, #1146
echo repr(int)
